<resources>
    <string name="app_name">CBIR</string>
    <string name="new_photo">New photo</string>
    <string name="uploadimg">Upload image</string>
    <string name="upload">Upload</string>

    <string name="e_mail">Your email</string>
    <string name="password">password</string>

    <string name="login">Login</string>
    <string name="gotoRegister">go to Register</string>

    <string name="username">username</string>
    <string name="register">Register</string>

    <string name="tag">Let\'s join us.</string>
    <string name="your_name">Your username</string>
    <string name="re_type_password">Re-type password</string>
    <string name="your_pass">Your password</string>
    <string name="gotoLogin">go to Login</string>
    <string name="uploadimg2">*please choose a photo from your gallery</string>
    <string name="choose">*please choose a method</string>
    <string name="pirates">SIFT</string>
    <string name="sift">SIFT</string>
    <string name="orb">ORB</string>
    <string name="brief">BRIEF</string>
    <string name="canny">CANNY</string>
    <string name="yolo">YOLO</string>
    <string name="location">Location</string>
    <string name="comm">Comments</string>
    <string name="hello">Hi</string>
    <string name="search">Search location</string>
    <string name="news">News</string>
    <string name="sighisoara">Sighisoara</string>
    <string name="bigar">Bigar waterfall</string>
    <string name="sibiu">Sibiu</string>
    <string name="foryou">For you</string>
    <string name="delta">The Danube Delta</string>
    <string name="trans">Transfagarasan</string>
    <string name="pod">God\'s bridge</string>
    <string name="cast">Cantacuzino Castle</string>


</resources>