<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="@drawable/w">


    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="70sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="cursive"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textSize="30sp"
        android:fontFamily="cursive"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:fontFamily="cursive"
        android:background="@drawable/et_custom"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="cursive"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_custom"
        android:textSize="25sp" />

      <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_pass"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="cursive"
        android:inputType="textPassword"
        android:background="@drawable/et_custom"
        android:textSize="25sp" />



        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_custom"
            android:fontFamily="cursive"
            android:hint="@string/re_type_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_marginStart="29dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="cursive"
            android:onClick="clickRegister"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="67dp"
            android:layout_height="55dp"

            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"

            android:layout_marginStart="246dp"
            android:layout_marginTop="225dp"
            android:layout_marginEnd="298dp"
            android:layout_marginBottom="46dp"

            android:onClick="clickGotoLogin"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:id="@+id/gotoRegister"
            android:layout_width="186dp"
            android:layout_height="72dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="97dp"
            android:layout_marginBottom="39dp"

            android:fontFamily="cursive"
            android:text="@string/gotoLogin"
            android:textColor="@color/black"
            android:textColorHint="#000000"

            android:textSize="35dp"
            android:textStyle="bold" />

    </RelativeLayout>


</LinearLayout>