<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#CAFAF5"
                android:backgroundTint="#FAFBFB"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hiText"
                    android:layout_width="195dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:fontFamily="cursive"
                    android:shadowColor="#009688"
                    android:shadowRadius="5"
                    android:text="@string/hello"
                    android:textAlignment="center"
                    android:textColor="#131313"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>

            </LinearLayout>

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="#277068"
                android:ems="10"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:text="@string/search"
                android:textAlignment="viewStart"
                android:textColor="#30514E"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:textSize="25dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="10dp"
                >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#83FBF0"
                    android:backgroundTint="#E2FDE3"
                    android:fontFamily="cursive"
                    android:shadowColor="#009688"
                    android:shadowRadius="5"
                    android:text="@string/news"
                    android:textAlignment="center"
                    android:textColor="#101010"
                    android:textSize="30sp"
                    android:layout_marginBottom="5dp"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="300dp"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="300dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="10dp">

                            <ImageView
                                android:id="@+id/imageCast"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:srcCompat="@drawable/cast"
                                android:layout_gravity="center"
                                android:scaleType="centerCrop"/>

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|center"
                                android:text="@string/cast"
                                android:textAlignment="center"
                                android:textColor="#FFFFFF"
                                android:textSize="30dp"
                                android:fontFamily="cursive"
                                android:layout_marginBottom="10dp"
                                android:textStyle="bold" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="300dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="10dp">

                            <ImageView
                                android:id="@+id/sighis"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:srcCompat="@drawable/sighisoara"
                                android:layout_gravity="center"
                                android:scaleType="centerCrop"/>

                            <TextView
                                android:id="@+id/textView13"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|center"
                                android:text="@string/sighisoara"
                                android:textAlignment="center"
                                android:textColor="#FFFFFF"
                                android:textSize="30dp"
                                android:fontFamily="cursive"
                                android:layout_marginBottom="10dp"
                                android:textStyle="bold" />
                        </FrameLayout>



                        <FrameLayout
                            android:layout_width="300dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="10dp">

                            <ImageView
                                android:layout_gravity="center"
                                android:scaleType="fitXY"
                                android:id="@+id/bigar"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:srcCompat="@drawable/bigar" />

                            <TextView
                                android:id="@+id/textView14"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|center"
                                android:text="@string/bigar"
                                android:textAlignment="center"
                                android:textColor="#FFFFFF"
                                android:textSize="30dp"
                                android:fontFamily="cursive"
                                android:layout_marginBottom="10dp"
                                android:textStyle="bold"
                                />
                        </FrameLayout>
                        <FrameLayout
                            android:layout_width="300dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="10dp">

                            <ImageView
                                android:id="@+id/sibiu"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/sibiu" />
                            <TextView
                                android:id="@+id/textView16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|center"
                                android:gravity="bottom|center"
                                android:text="@string/sibiu"
                                android:textAlignment="center"
                                android:textColor="#FFFFFF"
                                android:textSize="30dp"
                                android:fontFamily="cursive"
                                android:layout_marginBottom="10dp"
                                android:textStyle="bold" />
                        </FrameLayout>
                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:padding="10dp"
                    android:id="@+id/textView88"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="#83FBF0"
                    android:backgroundTint="#E2FDE3"
                    android:fontFamily="cursive"
                    android:shadowColor="#009688"
                    android:shadowRadius="5"
                    android:text="@string/foryou"
                    android:textAlignment="center"
                    android:textColor="#101010"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="300dp"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="300dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="10dp">

                            <ImageView
                                android:id="@+id/delta"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:srcCompat="@drawable/delta"
                                android:layout_gravity="center"
                                android:scaleType="centerCrop"/>

                            <TextView
                                android:id="@+id/textView11"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|center"
                                android:text="@string/delta"
                                android:textAlignment="center"
                                android:textColor="#FAFAFA"
                                android:textIsSelectable="true"
                                android:textSize="30dp"
                                android:fontFamily="cursive"
                                android:layout_marginBottom="10dp"
                                android:textStyle="bold" />

                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="300dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="10dp">

                            <ImageView
                                android:id="@+id/trans"
                                app:srcCompat="@drawable/trans"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:scaleType="centerCrop"/>

                            <TextView
                                android:id="@+id/textView12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|center"
                                android:text="@string/trans"
                                android:textAlignment="center"
                                android:textColor="#FFFBFB"
                                android:textSize="30dp"
                                android:fontFamily="cursive"
                                android:layout_marginBottom="10dp"
                                android:textStyle="bold" />
                        </FrameLayout>
                        <FrameLayout
                            android:layout_width="300dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="10dp">

                            <ImageView
                                android:id="@+id/pod"
                                app:srcCompat="@drawable/pod"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:scaleType="centerCrop"/>

                            <TextView
                                android:id="@+id/textView15"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|center|center_vertical"
                                android:text="@string/pod"
                                android:textAlignment="center"
                                android:textColor="#FFFFFF"
                                android:textStyle="bold"
                                android:textSize="30dp"
                                android:fontFamily="cursive"
                                android:layout_marginBottom="10dp"/>
                        </FrameLayout>

                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
