<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NearListActivity">

    <TextView
        android:id="@+id/textView0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#83FBF0"
        android:backgroundTint="#E2FDE3"
        android:fontFamily="cursive"
        android:padding="10dp"
        android:shadowColor="#009688"
        android:shadowRadius="5"
        android:text="Near you !"
        android:textAlignment="center"
        android:textColor="#101010"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView0"
        app:layout_constraintTop_toTopOf="@+id/scrollView2"></Space>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="413dp"
        android:layout_height="681dp"
        app:layout_constraintTop_toBottomOf="@+id/textView0"
        tools:layout_editor_absoluteX="-2dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:orientation="vertical">
            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">

                <ImageView
                    android:id="@+id/delta"
                    android:layout_width="match_parent"
                    android:layout_height="227dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/delta" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="cursive"
                    android:text="@string/delta"
                    android:textAlignment="center"
                    android:textColor="#FAFAFA"
                    android:textIsSelectable="true"
                    android:textSize="30dp"
                    android:textStyle="bold" />

            </FrameLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">

                <ImageView
                    android:id="@+id/trans"
                    android:layout_width="match_parent"
                    android:layout_height="339dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/trans" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="cursive"
                    android:text="@string/trans"
                    android:textAlignment="center"
                    android:textColor="#FFFBFB"
                    android:textSize="30dp"
                    android:textStyle="bold" />
            </FrameLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">

                <ImageView
                    android:id="@+id/pod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/pod" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center|center_vertical"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="cursive"
                    android:text="@string/pod"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>